SSCS-10321 Hearing Change for phone and email